--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -687,7 +687,11 @@ grafana:
         # -- namespace specifies the namespace for the configmap.
         namespace: ""
         # -- folder where the dashboard is stored by grafana.
-        folder: ""
+        folder:
+          # -- folder name
+          name: ""
+          # -- annotation used by grafana
+          annotation: grafana_dashboard_folder
 
 ######################
 # falco.yaml config  #
