--- a/charts/falco-talon/templates/configmap-grafana-dashboard.yaml
+++ b/charts/falco-talon/templates/configmap-grafana-dashboard.yaml
@@ -13,8 +13,8 @@ metadata:
     grafana_dashboard: "1"
   annotations:
     {{- if .Values.grafana.dashboards.configMaps.talon.folder }}
-    k8s-sidecar-target-directory: /tmp/dashboards/{{ .Values.grafana.dashboards.configMaps.talon.folder}}
-    grafana_dashboard_folder: {{ .Values.grafana.dashboards.configMaps.talon.folder }}
+    k8s-sidecar-target-directory: /tmp/dashboards/{{ .Values.grafana.dashboards.configMaps.talon.folder.name }}
+    {{ .Values.grafana.dashboards.configMaps.talon.folder.annotation }}: {{ .Values.grafana.dashboards.configMaps.talon.folder.name }}
     {{- end }}
 data:
   falco-talon-grafana-dashboard.json: |-
