--- a/charts/falco-talon/values.yaml
+++ b/charts/falco-talon/values.yaml
@@ -306,4 +306,8 @@ grafana:
         # -- namespace specifies the namespace for the configmap.
         namespace: ""
         # -- folder where the dashboard is stored by grafana.
-        folder: ""
+        folder:
+          # -- folder name
+          name: ""
+          # -- annotation used by grafana
+          annotation: grafana_dashboard_folder
