--- a/charts/k8s-metacollector/values.yaml
+++ b/charts/k8s-metacollector/values.yaml
@@ -201,4 +201,8 @@ grafana:
         # -- namespace specifies the namespace for the configmap.
         namespace: ""
         # -- folder where the dashboard is stored by grafana.
-        folder: ""
+        folder:
+          # -- folder name
+          name: ""
+          # -- annotation used by grafana
+          annotation: grafana_dashboard_folder
