--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -130,11 +130,9 @@ grafana:
         # -- namespace specifies the namespace for the configmap.
         namespace: ""
         # -- folder where the dashboard is stored by grafana.
-        folder:
-          # -- folder name
-          name: ""
-          # -- annotation used by grafana
-          annotation: grafana_dashboard_folder
+        folder: ""
+        # -- annotation used by grafana
+        folderAnnotation: grafana_dashboard_folder
 
 config:
   # -- Existing secret with configuration
@@ -404,11 +402,9 @@ config:
         # -- namespace specifies the namespace for the configmap.
         namespace: ""
         # -- folder where the dashboard is stored by grafana.
-        folder:
-          # -- folder name
-          name: ""
-          # -- annotation used by grafana
-          annotation: grafana_dashboard_folder
+        folder: ""
+        # -- annotation used by grafana
+        folderAnnotation: grafana_dashboard_folder
 
   prometheus:
     # -- comma separated list of fields to use as labels additionally to rule, source, priority, tags and custom_fields
