feat(falco): add new http_output option max_consecutive_timeouts
Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -995,6 +995,8 @@ falco:
     compress_uploads: false
     # -- keep_alive whether to keep alive the connection.
     keep_alive: false
+    # Maximum consecutive timeouts of libcurl to ignore
+    max_consecutive_timeouts: 5
 
   # [Stable] `program_output`
   #
