new(falco): add container plugin's configuration
* new helper
* unit tests
* configuration values in values.yaml

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/falco/templates/configmap.yaml
+++ b/charts/falco/templates/configmap.yaml
@@ -11,5 +11,5 @@ data:
     {{- include "k8smeta.configuration" . -}}
     {{- include "falco.engineConfiguration" . -}}
     {{- include "falco.metricsConfiguration" . -}}
-    {{- include "falco.containerEnginesConfiguration" . -}}
+    {{- include "falco.containerPlugin" . -}}
     {{- toYaml .Values.falco | nindent 4 }}
