fix: avoid ArgoCD diff on volumeClaimTemplates
K8S adds those fields by itself on apply, which creates a diff in ArgoCD.
We could ignore it, but there is little reason to omit those fields in
the definition.

Signed-off-by: Mathieu Garstecki <mathieu.garstecki@pigment.com>

--- a/charts/falcosidekick/templates/deployment-ui.yaml
+++ b/charts/falcosidekick/templates/deployment-ui.yaml
@@ -276,7 +276,9 @@ spec:
       {{ end }}
   {{- if .Values.webui.redis.storageEnabled }}
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: {{ include "falcosidekick.fullname" . }}-ui-redis-data
       spec:
         accessModes: [ "ReadWriteOnce" ]
