--- a/charts/falco/Chart.yaml
+++ b/charts/falco/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: falco
-version: 4.21.3
+version: 4.21.4
 appVersion: "0.40.0"
 description: Falco
 keywords:
@@ -26,7 +26,7 @@ dependencies:
     version: 0.1.*
     repository: https://falcosecurity.github.io/charts
     condition: collectors.kubernetes.enabled
-  - name: falco-talon
-    version: 0.2.*
+  - name: falcotalon
+    version: 0.3.*
     repository: https://falcosecurity.github.io/charts
     condition: falcotalon.enabled
