feat: bump talon to 0.3.0, rename talon subchart to follow standard
Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

feat: bump talon to 0.3.0, rename talon subchart to follow standard

Signed-off-by: Igor Eulalio <igor.eulalio@sysdig.com>

--- a/charts/falco/Chart.yaml
+++ b/charts/falco/Chart.yaml
@@ -27,6 +27,6 @@ dependencies:
     repository: https://falcosecurity.github.io/charts
     condition: collectors.kubernetes.enabled
   - name: falco-talon
-    version: 0.2.*
+    version: 0.3.*
     repository: https://falcosecurity.github.io/charts
-    condition: falcotalon.enabled
+    condition: falco-talon.enabled
