--- a/charts/falco/Chart.yaml
+++ b/charts/falco/Chart.yaml
@@ -29,4 +29,4 @@ dependencies:
   - name: falco-talon
     version: 0.3.*
     repository: https://falcosecurity.github.io/charts
-    condition: response_actions.enabled
+    condition: responseActions.enabled
