--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -391,9 +391,9 @@ collectors:
     # -- Enable Container Engine support.
     enabled: false
     # -- pluginRef is the OCI reference for the container plugin. It could be a full reference such as
-    # "ghcr.io/falcosecurity/plugins/plugin/container:0.2.0". Or just name + tag: containerengine:0.2.0.
-    pluginRef: "ghcr.io/falcosecurity/plugins/plugin/container:0.2.6"
-    # -- labelMaxLen is the maximum length of the labels that can be used in the container engine plugin.
+    # "ghcr.io/falcosecurity/plugins/plugin/container:0.3.0". Or just name + tag: container:0.3.0.
+    pluginRef: "ghcr.io/falcosecurity/plugins/plugin/container:0.3.0"
+    # -- labelMaxLen is the maximum length of the labels that can be used in the container plugin.
     # container labels larger than this value won't be collected.
     labelMaxLen: 100
     # -- withSize specifies whether to enable container size inspection, which is inherently slow.
