feat: Added dual-stack support to metric service
Signed-off-by: Fredrik Liv <fredrik.liv@elastisys.com>

--- a/charts/falco/templates/service.yaml
+++ b/charts/falco/templates/service.yaml
@@ -16,6 +16,12 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.metrics.service.type }}
+  {{- if .Values.metrics.service.ipFamilyPolicy }}
+  ipFamilyPolicy: {{ .Values.metrics.service.ipFamilyPolicy }}
+  {{- end }}
+  {{- if .Values.metrics.service.ipFamilies }}
+  ipFamilies: {{ toYaml .Values.metrics.service.ipFamilies | nindent 4 }}
+  {{- end }}
   ports:
     - port: {{ .Values.metrics.service.ports.metrics.port }}
       targetPort: {{ .Values.metrics.service.ports.metrics.targetPort }}
