feat: add Splunk output
Signed-off-by: Javier Vela <fjvela@gmail.com>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -532,3 +532,10 @@ data:
   {{ $weburl := printf "http://%s-ui:%d" (include "falcosidekick.fullname" .) (.Values.webui.service.port | int) }}
   WEBUI_URL: "{{ $weburl | b64enc }}"
   {{- end }}
+
+  # Splunk Output
+  SPLUNK_HOST: "{{ .Values.config.splunk.host | b64enc}}"
+  SPLUNK_TOKEN: "{{ .Values.config.splunk.token | b64enc}}"
+  SPLUNK_CUSTOMHEADERS: "{{ .Values.config.splunk.customheaders | b64enc}}"
+  SPLUNK_CHECKCERT: "{{ .Values.config.splunk.checkcert | printf "%t" | b64enc}}"
+  SPLUNK_MINIMUMPRIORITY: "{{ .Values.config.splunk.minimumpriority | b64enc}}"
