--- a/charts/falcosidekick/values.yaml
+++ b/charts/falcosidekick/values.yaml
@@ -14,7 +14,7 @@ image:
   # -- The image repository to pull from
   repository: falcosecurity/falcosidekick
   # -- The image tag to pull
-  tag: 2.31.1
+  tag: 2.32.0
   # -- The image pull policy
   pullPolicy: IfNotPresent
 
@@ -1121,6 +1121,18 @@ config:
     minimumpriority: ""
     # --  check if ssl certificate of the output is valid
     checkcert: true
+
+  splunk:
+    # -- Hostname of the target Splunk service (ex: http://host:port/services/collector/event)
+    host: ""
+    # -- Specify the authentication token for the HTTP Event Collector interface.
+    token: ""
+    # -- check if ssl certificate of the output is valid
+    checkcert: true
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customheaders: ""
+    # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
+    minimumpriority: ""
 
 service:
   # -- Service type
