fix: make grafana dashboard conditional on loki hostport
Signed-off-by: Joel McCoy <joel@defenseunicorns.com>

--- a/charts/falcosidekick/templates/falcosidekick-loki-dashboard-grafana.yaml
+++ b/charts/falcosidekick/templates/falcosidekick-loki-dashboard-grafana.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.config.loki.grafanaDashboard.enabled -}}
+{{- if and .Values.config.loki.grafanaDashboard.enabled (ne .Values.config.loki.hostport "") -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
